hvc.DynamoDBReport.Parser/Antlr4/output/DynamoDBReportAntlrParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:\g\hvc.DynamoDBReport\hvc.DynamoDBReport.Parser\Antlr4\DynamoDBReportAntlrParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class DynamoDBReportAntlrParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		EQ=1, NEQ=2, LTE=3, LT=4, GTE=5, GT=6, AND=7, ASCENDING=8, BEGINS=9, BETWEEN=10, 
		CONTAINS=11, DESCENDING=12, EXISTS=13, FILTERS=14, FROM=15, KEY=16, NOT=17, 
		REPORT=18, SELECT=19, USING=20, WHERE=21, WITH=22, COMMA=23, COLUMN=24, 
		EQUAL=25, SEMICOLUMN=26, BEGIN_BLOCK=27, END_BLOCK=28, OPEN_PARA=29, CLOSE_PARA=30, 
		STRING_WITH_QUOTES=31, SPACE=32, COMMENT=33, IDENTIFIER=34;
	public const int
		RULE_start_rule = 0, RULE_dynamo_query = 1, RULE_report_name = 2, RULE_select_statement = 3, 
		RULE_table_name = 4, RULE_output_column = 5, RULE_partition_statement = 6, 
		RULE_partition_key_name = 7, RULE_partition_key_value = 8, RULE_index_statement = 9, 
		RULE_index_name = 10, RULE_key_statement = 11, RULE_key_name = 12, RULE_key_statement_value = 13, 
		RULE_sortkey_statement = 14, RULE_simple_sortkey_statement = 15, RULE_between_sortkey_statement = 16, 
		RULE_beginswith_sortkey_statement = 17, RULE_sortkey_name = 18, RULE_sortkey_value = 19, 
		RULE_sortkey_condition = 20, RULE_where_statement = 21, RULE_simple_filter_statement = 22, 
		RULE_between_filter_statement = 23, RULE_exists_filter_statement = 24, 
		RULE_contains_filter_statement = 25, RULE_begins_with_filter_statement = 26, 
		RULE_filter_name = 27, RULE_filter_condition = 28, RULE_value = 29, RULE_first_value = 30, 
		RULE_second_value = 31, RULE_string_with_quotes = 32, RULE_parameter = 33;
	public static readonly string[] ruleNames = {
		"start_rule", "dynamo_query", "report_name", "select_statement", "table_name", 
		"output_column", "partition_statement", "partition_key_name", "partition_key_value", 
		"index_statement", "index_name", "key_statement", "key_name", "key_statement_value", 
		"sortkey_statement", "simple_sortkey_statement", "between_sortkey_statement", 
		"beginswith_sortkey_statement", "sortkey_name", "sortkey_value", "sortkey_condition", 
		"where_statement", "simple_filter_statement", "between_filter_statement", 
		"exists_filter_statement", "contains_filter_statement", "begins_with_filter_statement", 
		"filter_name", "filter_condition", "value", "first_value", "second_value", 
		"string_with_quotes", "parameter"
	};

	private static readonly string[] _LiteralNames = {
		null, "'=='", "'!='", "'<='", "'<'", "'>='", "'>'", "'And'", "'Ascending'", 
		"'Begins'", "'Between'", "'Contains'", "'Descending'", "'Exists'", "'Filters'", 
		"'From'", "'Key'", "'Not'", "'Report'", "'Select'", "'Using'", "'Where'", 
		"'With'", "','", "':'", "'='", "';'", "'{'", "'}'", "'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "EQ", "NEQ", "LTE", "LT", "GTE", "GT", "AND", "ASCENDING", "BEGINS", 
		"BETWEEN", "CONTAINS", "DESCENDING", "EXISTS", "FILTERS", "FROM", "KEY", 
		"NOT", "REPORT", "SELECT", "USING", "WHERE", "WITH", "COMMA", "COLUMN", 
		"EQUAL", "SEMICOLUMN", "BEGIN_BLOCK", "END_BLOCK", "OPEN_PARA", "CLOSE_PARA", 
		"STRING_WITH_QUOTES", "SPACE", "COMMENT", "IDENTIFIER"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DynamoDBReportAntlrParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static DynamoDBReportAntlrParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DynamoDBReportAntlrParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DynamoDBReportAntlrParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Start_ruleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Dynamo_queryContext[] dynamo_query() {
			return GetRuleContexts<Dynamo_queryContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Dynamo_queryContext dynamo_query(int i) {
			return GetRuleContext<Dynamo_queryContext>(i);
		}
		public Start_ruleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start_rule; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterStart_rule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitStart_rule(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart_rule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Start_ruleContext start_rule() {
		Start_ruleContext _localctx = new Start_ruleContext(Context, State);
		EnterRule(_localctx, 0, RULE_start_rule);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 68;
				dynamo_query();
				}
				}
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==REPORT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Dynamo_queryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REPORT() { return GetToken(DynamoDBReportAntlrParser.REPORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Report_nameContext report_name() {
			return GetRuleContext<Report_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BEGIN_BLOCK() { return GetToken(DynamoDBReportAntlrParser.BEGIN_BLOCK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Select_statementContext select_statement() {
			return GetRuleContext<Select_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FROM() { return GetToken(DynamoDBReportAntlrParser.FROM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Table_nameContext table_name() {
			return GetRuleContext<Table_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END_BLOCK() { return GetToken(DynamoDBReportAntlrParser.END_BLOCK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Index_statementContext index_statement() {
			return GetRuleContext<Index_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Partition_statementContext partition_statement() {
			return GetRuleContext<Partition_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHERE() { return GetToken(DynamoDBReportAntlrParser.WHERE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Where_statementContext[] where_statement() {
			return GetRuleContexts<Where_statementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Where_statementContext where_statement(int i) {
			return GetRuleContext<Where_statementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] AND() { return GetTokens(DynamoDBReportAntlrParser.AND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND(int i) {
			return GetToken(DynamoDBReportAntlrParser.AND, i);
		}
		public Dynamo_queryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dynamo_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterDynamo_query(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitDynamo_query(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDynamo_query(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Dynamo_queryContext dynamo_query() {
		Dynamo_queryContext _localctx = new Dynamo_queryContext(Context, State);
		EnterRule(_localctx, 2, RULE_dynamo_query);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			Match(REPORT);
			State = 74;
			report_name();
			State = 75;
			Match(BEGIN_BLOCK);
			State = 76;
			select_statement();
			State = 77;
			Match(FROM);
			State = 78;
			table_name();
			State = 81;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				{
				State = 79;
				index_statement();
				}
				break;
			case 2:
				{
				State = 80;
				partition_statement();
				}
				break;
			}
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHERE) {
				{
				State = 83;
				Match(WHERE);
				State = 84;
				where_statement();
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==AND) {
					{
					{
					State = 85;
					Match(AND);
					State = 86;
					where_statement();
					}
					}
					State = 91;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			State = 94;
			Match(END_BLOCK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Report_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DynamoDBReportAntlrParser.IDENTIFIER, 0); }
		public Report_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_report_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterReport_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitReport_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReport_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Report_nameContext report_name() {
		Report_nameContext _localctx = new Report_nameContext(Context, State);
		EnterRule(_localctx, 4, RULE_report_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Select_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SELECT() { return GetToken(DynamoDBReportAntlrParser.SELECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Output_columnContext[] output_column() {
			return GetRuleContexts<Output_columnContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Output_columnContext output_column(int i) {
			return GetRuleContext<Output_columnContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(DynamoDBReportAntlrParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(DynamoDBReportAntlrParser.COMMA, i);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterSelect_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitSelect_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Select_statementContext select_statement() {
		Select_statementContext _localctx = new Select_statementContext(Context, State);
		EnterRule(_localctx, 6, RULE_select_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(SELECT);
			State = 99;
			output_column();
			State = 104;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 100;
				Match(COMMA);
				State = 101;
				output_column();
				}
				}
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Table_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DynamoDBReportAntlrParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public String_with_quotesContext string_with_quotes() {
			return GetRuleContext<String_with_quotesContext>(0);
		}
		public Table_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_table_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterTable_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitTable_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTable_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Table_nameContext table_name() {
		Table_nameContext _localctx = new Table_nameContext(Context, State);
		EnterRule(_localctx, 8, RULE_table_name);
		try {
			State = 109;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 107;
				Match(IDENTIFIER);
				}
				break;
			case STRING_WITH_QUOTES:
				EnterOuterAlt(_localctx, 2);
				{
				State = 108;
				string_with_quotes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Output_columnContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DynamoDBReportAntlrParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLUMN() { return GetToken(DynamoDBReportAntlrParser.COLUMN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASCENDING() { return GetToken(DynamoDBReportAntlrParser.ASCENDING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DESCENDING() { return GetToken(DynamoDBReportAntlrParser.DESCENDING, 0); }
		public Output_columnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_output_column; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterOutput_column(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitOutput_column(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOutput_column(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Output_columnContext output_column() {
		Output_columnContext _localctx = new Output_columnContext(Context, State);
		EnterRule(_localctx, 10, RULE_output_column);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			Match(IDENTIFIER);
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLUMN) {
				{
				State = 112;
				Match(COLUMN);
				State = 113;
				_la = TokenStream.LA(1);
				if ( !(_la==ASCENDING || _la==DESCENDING) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Partition_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WITH() { return GetToken(DynamoDBReportAntlrParser.WITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Partition_key_nameContext partition_key_name() {
			return GetRuleContext<Partition_key_nameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(DynamoDBReportAntlrParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Partition_key_valueContext partition_key_value() {
			return GetRuleContext<Partition_key_valueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AND() { return GetToken(DynamoDBReportAntlrParser.AND, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Sortkey_statementContext sortkey_statement() {
			return GetRuleContext<Sortkey_statementContext>(0);
		}
		public Partition_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_partition_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterPartition_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitPartition_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPartition_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Partition_statementContext partition_statement() {
		Partition_statementContext _localctx = new Partition_statementContext(Context, State);
		EnterRule(_localctx, 12, RULE_partition_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(WITH);
			State = 117;
			partition_key_name();
			State = 118;
			Match(EQ);
			State = 119;
			partition_key_value();
			State = 122;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==AND) {
				{
				State = 120;
				Match(AND);
				State = 121;
				sortkey_statement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Partition_key_nameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(DynamoDBReportAntlrParser.IDENTIFIER, 0); }
		public Partition_key_nameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_partition_key_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterPartition_key_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitPartition_key_name(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPartition_key_name(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Partition_key_nameContext partition_key_name() {
		Partition_key_nameContext _localctx = new Partition_key_nameContext(Context, State);
		EnterRule(_localctx, 14, RULE_partition_key_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Partition_key_valueContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public String_with_quotesContext string_with_quotes() {
			return GetRuleContext<String_with_quotesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterContext parameter() {
			return GetRuleContext<ParameterContext>(0);
		}
		public Partition_key_valueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_partition_key_value; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.EnterPartition_key_value(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDynamoDBReportAntlrParserListener typedListener = listener as IDynamoDBReportAntlrParserListener;
			if (typedListener != null) typedListener.ExitPartition_key_value(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IDynamoDBReportAntlrParserVisitor<TResult> typedVisitor = visitor as IDynamoDBReportAntlrParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPartition_key_value(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Partition_key_valueContext partition_key_value() {
		Partition_key_valueContext _localctx = new Partition_key_valueContext(Context, State);
		EnterRule(_localctx, 16, RULE_partition_key_value);
		try {
			State = 128;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING_WITH_QUOTES:
				EnterOuterAlt(_localctx, 1);
				{
				State = 126;
				string_with_quotes();
				}
				break;
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 2);
				{
				State = 127;
				parameter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
